--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,4 +101,16 @@ main h2 span:hover {
   color: rgb(255, 0, 0);
   text-shadow: 0px 0px 30px red, 0px 0px 4px rgb(255, 0, 0);
   animation: 0.2s linear infinite col-rot;
+}
+
+@media (max-width: 400px) {
+  main .pfg, main .pfg-m {
+    height: 200px;
+  }
+  main .pfg-m {
+    top: 210px;
+  }
+  main h1, main h2 {
+    font-size: 30px;
+  }
 }/*# sourceMappingURL=style.css.map */
