--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,119 +1,168 @@
-@import "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap";
-
 @mixin flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@keyframes rot {
-    from { transform: rotateY(0deg)}
-    to { transform: rotateY(360deg)}
+$white: rgb(255, 255, 255);
+$grey: rgb(230, 230, 230);
+$d-grey: rgb(183, 183, 183);
+$dd-grey: rgb(144, 144, 144);
+
+$red: rgb(255, 209, 209);
+$yellow: rgb(237, 255, 133);
+$green: rgb(189, 255, 170);
+
+
+@keyframes click-pulse { 
+    from { background: $grey }
+    to { background: $white }
 }
 
-@keyframes rot-m {
-    from { transform: rotateY(0deg) rotateX(180deg)}
-    to { transform: rotateY(360deg) rotateX(180deg)}
-}
-
-@keyframes col-rot {
-    from { filter: hue-rotate(0deg) }
-    33% { color: yellow }
-    to { filter: hue-rotate(360deg) }
+.click-pulse { 
+    animation: 1s ease-out click-pulse;
 }
 
 * {
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
-
-    &::selection {
-        background: transparent;
-    }
 }
 
 main {
     @include flex;
 
-    background: black;
     height: 100vh;
-    overflow-y: hidden;
-    position: absolute;
     width: 100vw;
 
-    .pfg-m, .grad { pointer-events: none }
-    .pfg {
-        animation: 5s linear infinite rot;
-        aspect-ratio: 1;
-        height: 250px;
-        position: absolute;
-        z-index: 4;
+    .container {
+        aspect-ratio: 2;
+        border: 2px solid $d-grey;
+        border-radius: 30px;
+        box-shadow: 0px 5px 0px $dd-grey;
+        height: 40vh;
+        overflow: hidden;
 
-    }
+        header {
+            @include flex;
+            background: $grey;
+            border-bottom: 2px solid $d-grey;
+            justify-content: flex-start;
+            height: 20%;
+            position: relative;
+            
+            h1 {
+                font-weight: lighter;
+                transform: rotateX(40deg);
+                width: 50%;
+            }
 
-    .pfg-m {
-        animation: 5s linear infinite rot-m;
-        aspect-ratio: 1;
-        height: 250px;
-        opacity: 0.4;
-        position: relative;
-        transform: rotateX(180deg);
-        top: 260px;
-        z-index: 2;
-    }
+            .circles, .x {
+                @include flex;
+                height: 100%;
+                width: 25%;
+            }
 
-    .grad {
-        background: linear-gradient(180deg, transparent 0%, black 100%);
-        height: 50vh;
-        position: absolute;
-        top: 50%;
-        width: 100vw;
-        z-index: 3;
-    }
+            .circles {
+                .c {
+                    aspect-ratio: 1;
+                    border: 1px solid $dd-grey;
+                    border-radius: 100%;
+                    margin: 5px;
+                    height: 20%;
+                }
 
-    h1 {
-        color: white;
-        font-size: 40px;
-        height: 300px;
-        position: absolute;
-        top: 180px;
-        z-index: 10;
-    }
+                .red { background: $red; }
+                .yellow { background: $yellow; }
+                .green { background: $green; }
+            }
 
-    h2 {
-        color: white;
-        font-size: 40px;
-        height: 300px;
-        position: absolute;
-        bottom: -60px;
-        z-index: 10;
-
-        span {
-            text-shadow: 0px 0px 30px rgb(255 255 255 / 0.5), 0px 0px 4px white;
-            transition-duration: 0.5s;
-
-            &:hover {
-                color: rgb(255, 0, 0);
-                text-shadow: 0px 0px 30px red, 0px 0px 4px rgb(255, 0, 0);
-                animation: 0.2s linear infinite col-rot;
+            .x {
+                font-size: 120%;
             }
         }
-    }
-}
 
-@media (max-width: 400px) {
-    main {
-        .pfg, .pfg-m {
-            height: 200px;
-        }
+        .contents {
+            @include flex;
 
-        .pfg-m {
-            top: 210px;
-        }
+            height: 80%;
+            width: 100%;
 
-        h1, h2 {
-            font-size: 30px;
+            nav {
+                @include flex;
+
+                border: 2px solid $d-grey;
+                border-radius: 20px;
+                flex-direction: column;
+                margin: 10px;
+                height: 90%;
+                width: 20%;
+
+                p {
+                    font-size: 50%;
+                    letter-spacing: 4px;
+                }
+
+                button {
+                    background: $grey;
+                    border: 1px solid $dd-grey;
+                    border-radius: 5px;
+                    height: 15%;
+                    margin: 2px;
+                    transition: background 0.1s;
+                    width: 80%;
+
+                    &:hover {
+                        background: $white;
+                    }
+                }
+            }
+
+            .items {
+                @include flex;
+
+                border: 2px solid $d-grey;
+                border-radius: 20px;
+                flex-direction: column;
+                font-size: 80%;
+                margin: 10px;
+                height: 90%;
+                width: 60%;
+
+                .item {
+                    width: 80%;
+                    
+                    hr {
+                        margin: 3px;
+                    }
+
+                    .shinyhunt {
+                        @include flex;
+                        justify-content: flex-start;
+                        width: 100%;
+                    }
+
+                    .music-grid {
+                        @include flex;
+                        height: 50%;
+                        margin-top: 10px;
+
+                        .col {
+                            @include flex;
+
+                            width: 33%;
+                            height: 100%;
+                            flex-direction: column;
+                            justify-content: flex-start;
+
+                            h3 {
+                                font-size: 110%;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
