--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,76 +1,35 @@
 @font-face {
   font-family: "Mona Sans";
-  src: url("./Mona-Sans.woff2") format("woff2 supports variations"), url("./Mona-Sans.woff2") format("woff2-variations");
+  src: url("../../public/Mona-Sans.ttf") format("woff2 supports variations"), url("../../public/Mona-Sans.ttf") format("woff2-variations");
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
 * {
-  font-family: "Mona Sans";
-  font-size: 100px;
+  font-family: "Mona Sans", sans-serif;
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("../../public/curves.png"), url("../../public/background.svg"), linear-gradient(0deg, rgb(25, 25, 31) 0%, rgb(15, 15, 21) 100%);
+.background {
   height: 100vh;
   position: absolute;
   width: 100vw;
-}
-main .card-cont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  aspect-ratio: 2;
-  flex-direction: column;
-  position: relative;
-  margin: 50px;
-  width: 700px;
-}
-main .card-cont .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px);
-  background: linear-gradient(rgba(255, 255, 255, 0.05) 0%, rgba(40, 173, 255, 0.05) 100%);
-  border: 0.5px solid rgba(255, 255, 255, 0.2);
-  border-radius: 20px;
-  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.5);
-  color: white;
-  height: 100%;
-  flex-direction: column;
-  overflow: hidden;
-  width: 100%;
-  z-index: 2;
-}
-main .card-cont .card h1 {
-  font-size: 150%;
-  font-weight: 400;
-}
-main .card-cont .card h2 {
-  font-size: 30%;
-  font-weight: 100;
-}
-main .card-cont .card img {
-  filter: blur(150px);
-  height: 150px;
-  width: 150px;
-  position: absolute;
-  background: rgba(255, 255, 255, 0.2);
+  z-index: -1;
+  background-image: url("../../public/background.svg");
+  background-repeat: repeat;
+  background-color: rgb(26, 26, 29);
 }
 
-@media screen and (max-width: 720px) {
-  * {
-    font-size: 70px;
-  }
-}
-@media screen and (max-width: 500px) {
-  * {
-    font-size: 45px;
-  }
+p {
+  position: absolute;
+  color: white;
+  font-size: 35px;
+  font-weight: 100;
+  width: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 15%;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 7.5px;
 }/*# sourceMappingURL=style.css.map */
