--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,11 @@
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 @font-face {
   font-family: "Mona Sans";
   src: url("../../public/Mona-Sans.ttf") format("woff2 supports variations"), url("../../public/Mona-Sans.ttf") format("woff2-variations");
@@ -10,26 +18,75 @@
   padding: 0;
   text-align: center;
 }
+*::-moz-selection {
+  background: transparent;
+}
+*::selection {
+  background: transparent;
+}
 
-.background {
+body {
+  background: black;
   height: 100vh;
   position: absolute;
   width: 100vw;
   z-index: -1;
-  background-image: url("../../public/background.svg");
-  background-repeat: repeat;
-  background-color: rgb(26, 26, 29);
 }
 
-p {
+#warning {
+  animation: 1s ease-in-out 2s forwards fade-out;
+  position: absolute;
+  background: black;
+  color: white;
+  font-size: 20px;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+}
+#warning p {
+  position: absolute;
+  width: 30%;
+  height: 20%;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.speaker {
+  opacity: 0.5;
+  aspect-ratio: 1;
+  height: 50%;
+  position: absolute;
+  background-image: url("../../public/speaker.jpg");
+  background-size: cover;
+  outline: 5px solid black;
+  outline-offset: -2px;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  pointer-events: none;
+  z-index: -5;
+}
+
+h1 {
   position: absolute;
   color: white;
-  font-size: 35px;
+  font-size: 300px;
   font-weight: 100;
-  width: 30%;
+  width: 100%;
   left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  text-shadow: 0px 0px 20px rgb(255, 255, 255);
+}
+
+h2 {
+  position: absolute;
+  color: white;
+  font-size: 20px;
+  font-weight: 10;
+  width: 100%;
+  left: 50%;
+  bottom: 30%;
   transform: translateX(-50%);
-  bottom: 15%;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 7.5px;
 }/*# sourceMappingURL=style.css.map */
