--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -40,7 +40,7 @@ main .container {
         justify-content: flex-start;
 
         aspect-ratio: 3;
-        background: rgb(10 10 10);
+        background: rgb(12 12 12);
         border-radius: 10px;
         width: 60%;
 
@@ -48,25 +48,26 @@ main .container {
             @include flex;
 
             aspect-ratio: 1;
-            margin-left: 2.5%;
+            margin-left: 4%;
             width: 30%;
 
             img {
                 border-radius: 10px;
+                box-shadow: 0px 0px 50px rgb(50 50 50);
                 height: 100%;
                 width: 100%;
             }
 
             .circle {
                 aspect-ratio: 1;
+                background: red;
+                border-radius: 100px;
+                bottom: -40%;
                 border: 3px rgb(40 40 40) solid;
                 color: transparent;
                 height: 2vw;
-                border-radius: 100px;
-                background: red;
-                position: relative;
                 left: -17.5%;
-                bottom: -40%;
+                position: relative;
             }
         }
 
@@ -99,7 +100,7 @@ main .container {
                 background: rgb(20 20 20);
                 border-radius: 5px;
                 height: 40%;
-                margin-top: 10px;
+                margin-top: 5%;
                 width: 95%;
 
                 .cover {
@@ -129,6 +130,30 @@ main .container {
                         font-size: 80%;
                         font-weight: 200;
                         white-space: nowrap;
+                    }
+                }
+            }
+
+            .time {
+                @include flex;
+                flex-direction: row;
+
+                height: 10%;
+                margin-top: 2%;
+                width: 96%;
+
+                .bar {
+                    @include flex;
+                    justify-content: flex-start;
+
+                    background: rgb(40 40 40);
+                    height: 10%;
+                    margin: 2%;
+                    width: 80%;
+
+                    .fill {
+                        background: rgb(80 80 80);
+                        height: 100%;
                     }
                 }
             }
