--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,165 +1,44 @@
-@keyframes color-wheel {
-  0% {
-    color: rgb(255, 209, 102);
-  }
-  25% {
-    color: rgb(172, 210, 124);
-  }
-  50% {
-    color: rgb(89, 213, 148);
-  }
-  75% {
-    color: rgb(6, 214, 160);
-  }
-  100% {
-    color: rgb(255, 209, 102);
-  }
-}
 .main {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  background-color: rgb(44, 56, 81);
-  flex-direction: column;
+  background: black;
   height: 100vh;
   width: 100vw;
 }
 .main .container {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
-  justify-content: center;
-  font-size: 1vw;
-  height: 40vw;
-  width: 70vw;
-}
-.main .container .textbar {
-  align-items: center;
-  display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  background: black;
   flex-direction: column;
-  height: 100%;
-  width: 50%;
+  padding-top: 5%;
 }
-.main .container .textbar a {
-  align-items: center;
+.main .container .title {
+  align-items: flex-start;
   display: flex;
-  justify-content: center;
-  color: rgb(0, 92, 175);
-  font-size: 2vw;
-  font-stretch: extra-expanded;
-  font-weight: 400;
-  text-decoration: none;
-  transition: color 0.3s, font-weight 0.3s;
-}
-.main .container .textbar a:hover {
-  color: rgb(22, 132, 205);
-  font-weight: 500;
-}
-.main .container .textbar a .icon {
-  margin-left: 1vw;
-}
-.main .container .textbar h1 {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  animation: 8s ease-in-out infinite alternate color-wheel;
-  color: rgb(255, 209, 102);
-  font-size: 4vw;
-  font-stretch: ultra-expanded;
-  font-weight: 500;
-  margin-bottom: 1vw;
-}
-.main .container .textbar h1 .icon {
-  margin-right: 1.5vw;
-}
-.main .container .textbar p {
+  justify-content: flex-start;
+  background: black;
   color: white;
-  font-size: 2vw;
-  font-weight: 200;
-  width: 90%;
+  font-size: 4vh;
+  height: 2%;
+  margin-left: 8%;
+  overflow-x: hidden;
+  transition: background 0.2s, color 0.2s, font-weight 0.2s, padding-left 0.2s;
+  width: 70%;
 }
-.main .container .textbar .spiritomb {
-  aspect-ratio: 1;
-  width: 7vw;
+.main .container .title .rating {
+  font-size: 4vh;
+  padding-left: 2%;
+  transition: color 0.2s;
+  width: 10%;
 }
-.main .container .textbar .iconbar {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  margin: 2vw;
+.main .container .title:first-of-type {
+  margin-top: 3%;
 }
-.main .container .textbar .iconbar .icon {
-  color: white;
-  height: 3vw;
-  margin: 0.2vw;
-  transition: color 0.2s, transform 0.25s;
-  width: 3vw;
+.main .container .title:hover {
+  background: white;
+  color: black;
+  font-weight: 800;
+  padding-left: 5%;
 }
-.main .container .textbar .iconbar .icon:hover {
-  color: rgba(255, 255, 255, 0.8);
-  transform: rotateZ(10deg);
-}
-.main .container .picture {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 100%;
-  width: 50%;
-}
-.main .container .picture .box {
-  aspect-ratio: 1;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 10px;
-  filter: saturate(100%) grayscale(80%);
-  margin: 2vw;
-  height: 90%;
-}
-
-@media screen and (max-width: 600px) {
-  .main .container {
-    flex-direction: column;
-    height: 60vh;
-    width: 80vw;
-  }
-  .main .container .textbar {
-    height: 50%;
-    margin: 4vh;
-    width: 75%;
-  }
-  .main .container .textbar h1 {
-    font-size: 8vw;
-  }
-  .main .container .textbar h1 .icon {
-    margin-right: 1.5vw;
-  }
-  .main .container .textbar p {
-    font-size: 4vw;
-    text-align: center;
-    width: 130%;
-  }
-  .main .container .textbar a {
-    font-size: 4vw;
-  }
-  .main .container .textbar .iconbar .icon {
-    color: white;
-    height: 5vw;
-    margin: 0.2vw;
-    transition: color 0.2s, transform 0.25s;
-    width: 5vw;
-  }
-  .main .container .textbar .iconbar .icon:hover {
-    color: rgba(255, 255, 255, 0.8);
-    transform: rotateZ(10deg);
-  }
-  .main .container .textbar .spiritomb {
-    width: 9vw;
-  }
-  .main .container .picture {
-    height: 20%;
-  }
-  .main .container .picture .box {
-    height: 0%;
-    margin: 2vh;
-  }
+.main .container .title:hover .rating {
+  color: black;
 }/*# sourceMappingURL=about.module.css.map */
