--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,86 +24,50 @@ html {
   align-items: center;
   display: flex;
   justify-content: center;
-  background: linear-gradient(90deg, rgb(31, 40, 58) 0%, rgba(31, 40, 58, 0.6) 100%);
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   font-weight: 100;
-  height: 50px;
-  left: 10vw;
-  margin-bottom: 20px;
-  position: fixed;
-  top: 5%;
-  width: 80vw;
+  height: 8%;
+  width: 60%;
   z-index: 100;
-}
-.navbar .idx {
-  animation: 1.4s ease-in-out infinite alternate link-pulse;
-  font-family: "Courier New";
-  font-size: 2vh;
-  font-weight: 100;
-  margin-left: 2%;
-  margin-right: 10%;
-  white-space: nowrap;
-}
-.navbar .logout {
-  color: rgb(240, 230, 230);
-  margin-left: 5%;
 }
 .navbar a {
   align-items: center;
   display: flex;
   justify-content: center;
-  border-width: 1px;
-  border-color: transparent;
-  border-style: solid;
   color: rgb(230, 230, 230);
   font-size: 2vh;
+  font-stretch: ultra-expanded;
+  font-weight: 100;
   height: 60%;
   margin: 1%;
   text-decoration: none;
-  transition: border-color 0.3s, border-radius 0.3s, color 0.2s, font-size 0.2s, text-shadow 0.3s;
+  transition: color 0.2s, font-weight 0.2s;
   white-space: nowrap;
-  width: 15%;
+  width: 33%;
+}
+.navbar a::after {
+  background: white;
+  color: rgba(0, 0, 0, 0);
+  content: "e";
+  position: absolute;
+  width: 0%;
+  transition: width 0.2s;
+  z-index: -100;
 }
 .navbar a:hover {
-  border-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  color: white;
-  text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  color: black;
+  font-weight: 800;
+}
+.navbar a:hover::after {
+  width: 20%;
 }
 .navbar a:visited {
   text-decoration: none;
 }
 
-.blog-back {
-  background: transparent;
-  color: transparent;
-  font-size: 4vh;
-  font-stretch: expanded;
-  font-weight: 800;
-  margin-bottom: 2vh;
-  text-align: left;
-  text-decoration: none;
-  transition: color 0.3s;
-  width: 100%;
-  -webkit-text-stroke: 1px white;
-}
-.blog-back span {
-  transition: margin-right 0.3s;
-}
-.blog-back:hover {
-  color: white;
-}
-.blog-back:hover span {
-  margin-right: 1vw;
-}
-
-@media screen and (max-width: 600px) {
-  .navbar {
-    border-radius: 1vh;
-    height: 4%;
-  }
-  .navbar .idx, .navbar a {
-    font-size: 1.2vh;
+@media screen and (max-width: 800px) {
+  .navbar a {
+    font-size: 2vw;
   }
 }/*# sourceMappingURL=globals.css.map */
