--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -32,55 +32,45 @@ html {
 .navbar {
     @include flex;
 
-    background: linear-gradient(90deg, $bg-dark 0%, rgb(31 40 58 / 0.6) 100%);
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgb(0 0 0 / 0.5);
     font-weight: 100;
-    height: 50px;
-    left: 10vw;
-    margin-bottom: 20px;
-    position: fixed;
-    top: 5%;
-    width: 80vw;
+    height: 8%;
+    width: 60%;
     z-index: 100;
-
-    .idx {
-        animation: 1.4s ease-in-out infinite alternate link-pulse;
-        font-family: "Courier New";
-        font-size: 2vh;
-        font-weight: 100;
-        margin-left: 2%;
-        margin-right: 10%;
-        white-space: nowrap;
-    }
-
-    .logout {
-        color: rgb(240 230 230);
-        margin-left: 5%;
-    }
 
     a {
         @include flex;
 
-        border-width: 1px;
-        border-color: transparent;
-        border-style: solid;
-
         color: rgb(230 230 230);
         font-size: 2vh;
+        font-stretch: ultra-expanded;
+        font-weight: 100;
         height: 60%;
         margin: 1%;
         text-decoration: none;
-        transition: border-color 0.3s, border-radius 0.3s, color 0.2s, font-size 0.2s, text-shadow 0.3s;
+        transition: color 0.2s, font-weight 0.2s;
         white-space: nowrap;
-        width: 15%;
+        width: 33%;
+
+        &::after {
+            background: white;
+            color: rgb(0 0 0 / 0);
+            content: 'e';
+            position: absolute;
+            width: 0%;
+
+            transition: width 0.2s;
+            z-index: -100;
+        }
 
         &:hover {
-            border-color: rgb(255 255 255 / 0.5);
+            color: black;
+            font-weight: 800;
 
-            border-radius: 10px;
-            color: white;
-            text-shadow: 0px 5px 5px rgb(0 0 0 / 0.3);
+            &::after {
+                width: 20%;
+            }
         }
 
         &:visited {
@@ -89,39 +79,8 @@ html {
     }
 }
 
-.blog-back {
-    background: transparent;
-    color: transparent;
-    font-size: 4vh;
-    font-stretch: expanded;
-    font-weight: 800;
-    margin-bottom: 2vh;
-    text-align: left;
-    text-decoration: none;
-    transition: color 0.3s;
-    width: 100%;
-    -webkit-text-stroke: 1px white;
-
-    span {
-        transition: margin-right 0.3s;
-    }
-
-    &:hover {
-        color: white;
-        
-        span {
-            margin-right: 1vw;
-        }
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .navbar {
-        border-radius: 1vh;
-        height: 4%;
-
-        .idx, a {
-            font-size: 1.2vh;
-        }
+@media screen and (max-width: 800px) {
+    .navbar a {
+        font-size: 2vw;
     }
 }
