--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,52 +1,190 @@
-@keyframes shift-margin {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@font-face {
+  font-family: "Mona Sans";
+  src: url("../MonaSans.woff2");
+}
+@keyframes shadow-pulse {
   from {
-    margin-left: 0px;
+    box-shadow: 0px 0px 0px rgb(10, 10, 10);
   }
   to {
-    margin-left: 3%;
+    box-shadow: 0px 0px 50px rgb(10, 10, 10);
   }
 }
+.bg {
+  background: black;
+  height: 100vh;
+  overflow-y: hidden;
+  position: absolute;
+  width: 100vw;
+}
+
 .main {
-  align-items: center;
+  background: black;
+  font-family: "Mona Sans", sans-serif;
+  font-size: 1.5vw;
+  font-weight: 200;
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
+  text-align: center;
+}
+.main .container {
   display: flex;
   justify-content: center;
-  background-color: rgb(44, 56, 81);
+  align-items: center;
+  background: black;
+  color: white;
   flex-direction: column;
+  font-size: 20px;
+  font-weight: 200;
   height: 100vh;
   width: 100vw;
 }
-.main .title {
-  align-items: center;
+.main .container .profile {
   display: flex;
   justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  aspect-ratio: 3;
+  background: black;
+  border-radius: 10px;
+  font-size: 1.5vw;
+  width: 60%;
+}
+.main .container .profile .pfp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1;
+  margin-left: 5%;
+  width: 29%;
+}
+.main .container .profile .pfp img {
+  animation: 2s infinite alternate ease-in-out shadow-pulse;
+  border-radius: 15px;
+  height: 100%;
+  width: 100%;
+}
+.main .container .profile .pfp .circle {
+  aspect-ratio: 1;
+  background: red;
+  border-radius: 100px;
+  bottom: -40%;
+  border: 3px rgb(20, 20, 20) solid;
+  color: transparent;
+  height: 2vw;
+  left: -17.5%;
+  position: relative;
+}
+.main .container .profile .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  font-size: 8vw;
-  height: 20vw;
-  width: 60vw;
+  align-items: flex-start;
+  aspect-ratio: 2;
+  margin-left: 4%;
+  height: 80%;
+  width: 60%;
 }
-.main .title h1, .main .title h2 {
-  color: white;
-  font-stretch: ultra-expanded;
-  font-size: 10vw;
-  line-height: 80%;
-  margin: 0;
-  padding: 0;
+.main .container .profile .info h1 {
+  font-size: 250%;
+  font-stretch: expanded;
+  font-weight: 800;
+  white-space: nowrap;
 }
-.main .title h2 {
-  color: #aaa;
-  font-size: 3vw;
+.main .container .profile .info h2 {
+  font-size: 100%;
+  font-stretch: semi-expanded;
+  font-weight: 300;
+  white-space: nowrap;
 }
-.main .title h2:hover {
-  color: red;
-  font-size: 3vw;
+.main .container .profile .info .spotify {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  background: rgb(20, 20, 20);
+  border-radius: 5px;
+  box-shadow: 0px 0px 50px rgb(10, 10, 10);
+  height: 60%;
+  margin-top: 3.5%;
+  width: 95%;
+}
+.main .container .profile .info .spotify .cover {
+  aspect-ratio: 1;
+  border-radius: 5px;
+  margin-left: 3%;
+  margin-right: 1.5%;
+  height: 80%;
+}
+.main .container .profile .info .spotify .description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
+  height: 100%;
+  margin-left: 2%;
+  width: 60%;
+}
+.main .container .profile .info .spotify .description h1 {
+  font-size: 120%;
+  font-weight: 500;
+  white-space: nowrap;
+}
+.main .container .profile .info .spotify .description h2 {
+  font-size: 80%;
+  font-weight: 200;
+  white-space: nowrap;
+}
+.main .container .profile .info .time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background: rgb(20, 20, 20);
+  border-radius: 5px;
+  height: 10%;
+  margin-top: 10%;
+  width: 110%;
+}
+.main .container .profile .info .time .bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  background: rgb(40, 40, 40);
+  border-radius: 100px;
+  height: 20%;
+  margin: 2%;
+  width: 80%;
+}
+.main .container .profile .info .time .bar .fill {
+  background: rgb(80, 80, 80);
+  border-radius: 100px;
+  height: 100%;
+}
+.main .container .profile .info .time p {
+  font-size: 80%;
+  font-weight: 200;
+  text-align: center;
+  width: 10%;
+}
+.main .container .profile .info .time .t1 {
+  margin-right: 1%;
+}
+.main .container .profile .info .time .t2 {
+  margin-left: 1%;
 }
 
-@media screen and (max-width: 600px) {
-  .main .title {
-    height: 30vw;
-    width: 80vw;
+@media screen and (max-width: 800px) {
+  .main .container .profile {
+    font-size: 2vw;
+    width: 80%;
   }
-  .main .title h1, .main .title h2 {
-    font-size: 15vw;
+  .main .container .profile .pfp .circle {
+    height: 3vw;
   }
 }/*# sourceMappingURL=index.module.css.map */
