--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,60 +1,201 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+@font-face {
+    font-family: "Mona Sans";
+    src: url("../MonaSans.woff2")
+}
+
 @mixin flex {
-    align-items: center;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
-@keyframes shift-margin {
-    from { margin-left: 0px }
-    to { margin-left: 3% }
+@keyframes shadow-pulse {
+    from { box-shadow: 0px 0px 0px rgb(10 10 10) }
+    to { box-shadow: 0px 0px 50px rgb(10 10 10) }
 }
-
-$bg: rgb(44 56 81);
+.bg {
+    background: black;
+    height: 100vh;
+    overflow-y: hidden;
+    position: absolute;
+    width: 100vw;
+}
 
 .main {
-    @include flex;
-    background-color: $bg;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
+    background: black;
+    font-family: "Mona Sans", sans-serif;
+    font-size: 1.5vw;
+    font-weight: 200;
+    margin: 0;
+    padding: 0;
+    overflow-y: hidden;
+    text-align: center;
 
-    .title {
+    .container {
         @include flex;
+        background: black;
+        color: white;
         flex-direction: column;
-        font-size: 8vw;
-        height: 20vw;
-        width: 60vw;
-
-        h1, h2 {
-            color: white;
-            font-stretch: ultra-expanded;
-            font-size: 10vw;
-            line-height: 80%;
-            margin: 0;
-            padding: 0;
-        }
-
-        h2 {
-            color: #aaa;
-            font-size: 3vw;
-        
-            &:hover {
-                color: red;
-                font-size: 3vw;
+        font-size: 20px;
+        font-weight: 200;
+    
+        height: 100vh;
+        width: 100vw;
+    
+        .profile {
+            @include flex;
+            justify-content: flex-start;
+    
+            aspect-ratio: 3;
+            background: black;
+            border-radius: 10px;
+            font-size: 1.5vw;
+            width: 60%;
+    
+            .pfp {
+                @include flex;
+    
+                aspect-ratio: 1;
+                margin-left: 5%;
+                width: 29%;
+    
+                img {
+                    animation: 2s infinite alternate ease-in-out shadow-pulse;
+                    border-radius: 15px;
+                    height: 100%;
+                    width: 100%;
+                }
+    
+                .circle {
+                    aspect-ratio: 1;
+                    background: red;
+                    border-radius: 100px;
+                    bottom: -40%;
+                    border: 3px rgb(20 20 20) solid;
+                    color: transparent;
+                    height: 2vw;
+                    left: -17.5%;
+                    position: relative;
+                }
+            }
+    
+            .info {
+                @include flex;
+                flex-direction: column;
+                align-items: flex-start;
+    
+                aspect-ratio: 2;
+                margin-left: 4%;
+                height: 80%;
+                width: 60%;
+    
+                h1 {
+                    font-size: 250%;
+                    font-stretch: expanded;
+                    font-weight: 800;
+                    white-space: nowrap;
+                }
+    
+                h2 {
+                    font-size: 100%;
+                    font-stretch: semi-expanded;
+                    font-weight: 300;
+                    white-space: nowrap;
+                }
+    
+                .spotify {
+                    @include flex;
+                    justify-content: flex-start;
+    
+                    background: rgb(20 20 20);
+                    border-radius: 5px;
+                    box-shadow: 0px 0px 50px rgb(10 10 10);
+                    height: 60%;
+                    margin-top: 3.5%;
+                    width: 95%;
+    
+                    .cover {
+                        aspect-ratio: 1;
+                        border-radius: 5px;
+                        margin-left: 3%;
+                        margin-right: 1.5%;
+                        height: 80%;
+                    }
+    
+                    .description {
+                        @include flex;
+                        flex-direction: column;
+    
+                        align-items: flex-start;
+                        height: 100%;
+                        margin-left: 2%;
+                        width: 60%;
+    
+                        h1 {
+                            font-size: 120%;
+                            font-weight: 500;
+                            white-space: nowrap;
+                        }
+    
+                        h2 {
+                            font-size: 80%;
+                            font-weight: 200;
+                            white-space: nowrap;
+                        }
+                    }
+                }
+    
+                .time {
+                    @include flex;
+                    flex-direction: row;
+    
+                    background: rgb(20 20 20);
+                    border-radius: 5px;
+                    height: 10%;
+                    margin-top: 10%;
+                    width: 110%;
+    
+                    .bar {
+                        @include flex;
+                        justify-content: flex-start;
+    
+                        background: rgb(40 40 40);
+                        border-radius: 100px;
+                        height: 20%;
+                        margin: 2%;
+                        width: 80%;
+    
+                        .fill {
+                            background: rgb(80 80 80);
+                            border-radius: 100px;
+                            height: 100%;
+                        }
+                    }
+    
+                    p {
+                        font-size: 80%;
+                        font-weight: 200;
+                        text-align: center;
+                        width: 10%;
+                    }
+    
+                    .t1 { margin-right: 1%; }
+                    .t2 { margin-left: 1%; }
+                }
             }
         }
     }
 }
 
-@media screen and (max-width: 600px) {
-    .main {
-        .title {
-            height: 30vw;
-            width: 80vw;
+@media screen and (max-width: 800px) {
+    .main .container .profile {
+        font-size: 2vw;
+        width: 80%;
 
-            h1, h2 {
-                font-size: 15vw
-            }
+        .pfp .circle { 
+            height: 3vw;
         }
     }
 }
